--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-api": "node index.js",
-    "start-noticia-service" : "node grpc/noticias/noticias.js",
-    "start" : "npm run start-noticia-service & npm run start-api"
+    "start-noticia-service": "node grpc/noticias/noticias.js",
+    "start-noticia-search-service": "node grpc/noticias/noticia-search.js",
+    "start": "npm run start-noticia-service & npm run start-api & npm run start-noticia-search-service"
   },
   "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "got": "^12.0.1",
     "grpc": "^1.24.11",
